# RustAPI

./: .env  Cargo.toml
src/: main.rs  model.rs
