[package]
name = "loginAPI"
version = "0.1.0"
authors = ["henriknafo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"]}
diesel_codegen = {version = "1.16.1", features = ["postgres"]}
dotenv = "0.15.0"

